# sparsepoly

./: .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: synthesis_feature_interaction_selection.ipynb
sparsepoly/: __init__.py  base.py  cd_linear.py  dataset.py  kernels.py  loss.py  pbcd.py  pbcd_all.py  pcd.py  pcd_all.py  psgd.py  setup.py  sparse_all_subsets.py  sparse_factorization_machines.py
sparsepoly/optimizer/: pbcd_all.py  pcd.py  pcd_all.py  psgd.py
sparsepoly/regularizer/: __init__.py  l1.py  l21.py  omegacs.py  omegati.py  squaredl12.py  squaredl21.py  utils.py
sparsepoly/tests/: __init__.py  cd_linear_slow.py  loss_slow.py  test_pbcd.py  test_pcd.py  test_prox.py  test_psgd.py
sparsepoly/tests/regularizer/: __init__.py  l1.py  l21.py  omegacs.py  omegati.py  squaredl12.py  squaredl21.py  utils.py
tests/: __init__.py  cd_linear_slow.py  loss_slow.py  test_pbcd.py  test_pcd.py  test_prox.py  test_psgd.py
tests/regularizer/: omegacs.py
